syntax = "proto3";

option go_package = "oversee/collector/logsapi";

package logsapi;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

service Collector {
  rpc PersistLog (PersistLogRequest) returns (PersistLogReply) {}
  rpc BatchPersistLog (BatchPersistLogRequest) returns (PersistLogsReply) {}
  rpc ListLogs(ListLogsRequest) returns (Logs) {}
}

message ListLogsRequest {
}

message Logs {
  repeated Log logs = 1;
}

message Log {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;  // Event timestamp (ISO 8601)
  string service_name = 3;                   // Originating service
  string operation = 4;                      // Action performed (e.g., "user.create", "order.update")
  string actor_id = 5;                       // User, system, or process performing the action
  string actor_type = 6;                     // E.g., "user", "service_account", "admin"
  repeated string affected_resources = 7;    // List of resource IDs affected
  google.protobuf.Struct metadata = 8;
  string integrity_hash = 9;                // Optional HMAC/SHA256 hash for tamper-proofing
}

message PersistLogRequest {
  Log log = 1;
}

message BatchPersistLogRequest {
  repeated Log logs = 1;
}

message PersistLogReply {
  string id =1;
  bool success = 2;
  Error reason = 3;
}

message Error {
  string message =1;
  int32 code = 2;
}


message PersistLogsReply {
  repeated PersistLogReply results = 1;
}
